Implement locking on non-NFS systems using O_EXCL

Fixes locking on VFAT and CIFS etc.

The unit-test only tests local files automatically, but explains
how to set up test environments to test it on a FAT filesystem and on a NFS mount.

BUG: 203554
(cherry picked from commit 10ca4ddc8cca49103c2d605a64468788605f3010)